--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "@types/koa": "^2.11.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3"
+  },
+  "scripts": {
+    "dev": "ts-node src/app.ts"
   }
 }
