--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,13 +4,10 @@ env:
   node: true
 extends:
   - airbnb-base
+  - 'plugin:@typescript-eslint/recommended'
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
-parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 2018
-  sourceType: module
-plugins:
-  - '@typescript-eslint'
 rules: {}
