--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "typescript": "^3.7.3"
   },
   "scripts": {
-    "dev": "nodemon --legacy-watch",
+    "start:dev": "nodemon --legacy-watch",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix"
   },
