--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - .:/app:cached
       - /app/node_modules
+    command: yarn run start:dev
     ports:
       - 3000:3000  # for HTTP Server
       - 9229:9229  # for Node.js Inspector
