--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "start:dev": "nodemon --config .nodemon.json --legacy-watch"
+  },
   "dependencies": {
     "koa": "^2.11.0"
   },
@@ -15,10 +20,5 @@
     "prettier": "^1.19.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3"
-  },
-  "scripts": {
-    "start:dev": "nodemon --config .nodemon.json --legacy-watch",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix"
   }
 }
