--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "serverless-koa-typescript-boilerplate",
   "scripts": {
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
