--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "serverless-koa-typescript-boilerplate",
+  "version": "0.1.0",
   "scripts": {
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
