--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "serverless-koa-typescript-boilerplate",
   "version": "0.1.0",
   "description": "serverless-koa-typescript-boilerplate",
+  "license": "UNLICENSED",
   "scripts": {
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
