--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "serverless-koa-typescript-boilerplate",
   "license": "UNLICENSED",
   "author": "blooper05",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
