--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/koa": "^2.11.0",
     "@types/koa-bunyan-logger": "^2.1.1",
+    "@types/koa-morgan": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "eslint": "^6.7.2",
