--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "koa": "^2.11.0",
-    "koa-bunyan-logger": "^2.1.0",
-    "koa-morgan": "^1.0.1"
+    "koa-bunyan-logger": "^2.1.0"
   },
   "devDependencies": {
     "@types/koa": "^2.11.0",
